# neulib_core

./: CMakeLists.txt
conda-recipe/: build.sh  meta.yaml
include/core/: sharedresourcepool.h  stringbuilder.h  utilities.h
src/: sharedresourcepool.cpp  stringbuilder.cpp  utilities.cpp
tests/: CMakeLists.txt  testutilities.cpp
